# laboratory

./: .gitignore  CMakeLists.txt
crtp/: CMakeLists.txt  crtp.cpp
erasure/: CMakeLists.txt  main.cpp  msg_virtualize.cpp  msglib.h  msgtypes.inl
profiler/: CMakeLists.txt  README.md  profiler.cpp  test_benchmark.cpp
stream/: istream.cpp  ostream.cpp  stream.cpp
utils/: CMakeLists.txt  print.h  scope_profiler.h
